--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,20 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/fileprovider" />
             </provider>
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".LoginActivity"
+            >
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label=""
+            >
         </activity>
     </application>
 
