--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.InstagramClone">
+        android:theme="@style/Theme.InstagramClone"
+        android:usesCleartextTraffic="true">
             <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
             <provider
                 android:name="androidx.core.content.FileProvider"
