Minor changes to UI and syntax

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name=".MainActivity"
             android:label=""
+            android:icon="@drawable/nav_logo_whiteout"
             >
         </activity>
     </application>
